<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/white">

    <!-- Cuadro central con esquinas redondeadas -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_confirmacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/primaryV2"
        android:elevation="4dp"
        android:padding="16dp"
        android:layout_marginHorizontal="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

            <!-- Título de confirmación -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_confirmation"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"/>

            <!-- Línea divisoria -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                android:layout_marginBottom="16dp"/>

            <!-- Sección de número y cambiar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/number"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="-1dp"/>

                <TextView
                    android:id="@+id/textView_cambiar_numero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textColor="@color/black"
                    android:textSize="10dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="-1dp"/>

            </LinearLayout>

            <!-- Número de teléfono -->
            <TextView
                android:id="@+id/textView_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXX-XXXX-XXX"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                />

            <!-- Línea divisoria -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                android:layout_marginBottom="16dp"/>

            <!-- Sección de importe y cambiar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recharge_import"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textView_cambiar_importe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Importe de recarga -->
            <TextView
                android:id="@+id/textView_importe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$XXX.XX"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"/>

            <!-- Mensaje de advertencia -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caution_alert"
                android:textSize="10sp"
                android:layout_marginBottom="16dp"
                android:gravity="start"
                />

            <!-- Cuadro de alerta -->

            <!-- Botón de confirmar -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="32dp"
                android:background="@color/secondary"
                android:drawableTop="@drawable/ic_warning"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:padding="2dp"
                android:text="@string/confirmation_alert"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_confirmar_recarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmar"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginHorizontal="32dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="1dp"
        android:src="@drawable/ic_circle_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary" />
</androidx.constraintlayout.widget.ConstraintLayout>
